Bug #2172 - Accessibility : Teal Text area on Homepage slider is low contrast

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1257,7 +1257,7 @@ body form{
                     float: left;
                 }
                 .camera_pag{
-                    background: @cyan;
+                    background: @medTeal;
                     width: 4.5%;
                     float: left;
                     height: 100%;
@@ -1267,7 +1267,7 @@ body form{
                         li{
                             margin: 0 auto 4px;
                             background: transparent;
-                            border: 1px solid @white;
+                            border: 1px solid @80gray;
                             display: block;
                             height: 12px;
                             width: 12px;
@@ -1275,7 +1275,7 @@ body form{
                                 display: none;
                             }
                             &.cameracurrent{
-                                background: #fff;
+                                background: @80gray;
                             }
                         }
                     }
@@ -1305,9 +1305,9 @@ body form{
                 }
             }
             .camera_content{
-                background: rgba(99, 223, 210, 0.8);
+                background: rgba(92, 218, 205, .9);
                 bottom: 0;
-                color: @white;
+                color: @80gray;
                 position: absolute;
                 right: 0;
                 top: 0;
@@ -1331,7 +1331,7 @@ body form{
                 }
                 h2,
                 p{
-                    text-shadow: 2px 2px 2px rgba(99, 219, 152, 0.8);
+                    text-shadow: 2px 2px 2px rgba(51, 51, 51, 0.2);
                 }
                 @media (max-width: @screen-sm-max){
                     width: 59%;
